src/infra/ias/vnet/template.json
{
	"$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {
		"environment": {
			"defaultValue": "dev",
			"type": "String"
		},
		"vnetAddressSpace": {
			"type": "string",
			"defaultValue": "192.168.0.0/16",
			"metadata": {
				"description": "CIDR prefix for the VNet address space."
			}
		},
		"frontEndSubnetPrefix": {
			"type": "string",
			"defaultValue": "192.168.1.0/24",
			"metadata": {
				"description": "CIDR address prefix for the front end subnet."
			}
		},
		"backEndSubnetPrefix": {
			"type": "string",
			"defaultValue": "192.168.2.0/24",
			"metadata": {
				"description": "CIDR address prefix for the back end subnet."
			}
		},
		"regionId": {
			"defaultValue": "uksouth",
			"type": "String"
		}
	},
	"variables": {
		"vnetName": "[concat('vnet-ais-',parameters('environment'), '-', parameters('regionId'),'-001')]",
		"backEndNSGName": "[concat('nsg-ais-backend-',parameters('environment'), '-', parameters('regionId'),'-001')]",
		"frontEndNSGName": "[concat('nsg-ais-frontend-',parameters('environment'), '-', parameters('regionId'),'-001')]",
		"backEndSubnetName": "[concat('snet-ais-backend-',parameters('environment'), '-', parameters('regionId'),'-001')]",
		"frontEndSubnetName": "[concat('snet-ais-frontend-',parameters('environment'), '-', parameters('regionId'),'-001')]"
	},
	"resources": [
		{
			"apiVersion": "2015-06-15",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[variables('backEndNSGName')]",
			"location": "[resourceGroup().location]",
			"tags": {
				"displayName": "NSG - Remote Access"
			},
			"properties": {
				"securityRules": [
					{
						"name": "allow-frontend",
						"properties": {
							"description": "Allow FE Subnet",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "1433",
							"sourceAddressPrefix": "[parameters('frontEndSubnetPrefix')]",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 100,
							"direction": "Inbound"
						}
					},
					{
						"name": "block-internet",
						"properties": {
							"description": "Block Internet",
							"protocol": "*",
							"sourcePortRange": "*",
							"destinationPortRange": "*",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "Internet",
							"access": "Deny",
							"priority": 200,
							"direction": "Outbound"
						}
					}
				]
			}
		},
		{
			"apiVersion": "2015-06-15",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[variables('frontEndNSGName')]",
			"location": "[resourceGroup().location]",
			"tags": {
				"displayName": "NSG - Front End"
			},
			"properties": {
				"securityRules": [
					{
						"name": "rdp-rule",
						"properties": {
							"description": "Allow RDP",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "3389",
							"sourceAddressPrefix": "Internet",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 100,
							"direction": "Inbound"
						}
					},
					{
						"name": "web-rule",
						"properties": {
							"description": "Allow WEB",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "80",
							"sourceAddressPrefix": "Internet",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 101,
							"direction": "Inbound"
						}
					}
				]
			}
		},
		{
			"apiVersion": "2015-06-15",
			"type": "Microsoft.Network/virtualNetworks",
			"name": "[variables('vnetName')]",
			"location": "[resourceGroup().location]",
			"dependsOn": [
				"[concat('Microsoft.Network/networkSecurityGroups/', variables('frontEndNSGName'))]",
				"[concat('Microsoft.Network/networkSecurityGroups/', variables('backEndNSGName'))]"
			],
			"tags": {
				"displayName": "VNet"
			},
			"properties": {
				"addressSpace": {
					"addressPrefixes": [
						"[parameters('vnetAddressSpace')]"
					]
				},
				"subnets": [
					{
						"name": "[variables('frontEndSubnetName')]",
						"properties": {
							"addressPrefix": "[parameters('frontEndSubnetPrefix')]",
							"networkSecurityGroup": {
								"id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('frontEndNSGName'))]"
							}
						}
					},
					{
						"name": "[variables('backEndSubnetName')]",
						"properties": {
							"addressPrefix": "[parameters('backEndSubnetPrefix')]",
							"networkSecurityGroup": {
								"id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backEndNSGName'))]"
							}
						}
					}
				]
			}
		}
	]
}
